2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* src/eglib-remap.h: Remap g_ptr_array_remove_fast too.

2010-06-15  Zoltan Varga  <vargaz@gmail.com>

	* src/gunicode.c: Applied patch from Hib Eris <hib@hiberis.nl>. use "windows.h"
	instead of "Windows.h".

2010-05-25  Zoltan Varga  <vargaz@gmail.com>

	* Applied patch from Burkhard Linke (blinke@cebitec.uni-bielefeld.de). Fix
	building on solaris.

2010-05-21  Zoltan Varga  <vargaz@gmail.com>

	* src/gmisc-win32.c (g_setenv): Use the
	GetEnvironmentVariableW/SetEnvironmentVariableW variants.

2010-05-15  Zoltan Varga  <vargaz@gmail.com>

	* src/glib.h (g_error): Add a for (;;) after the call to tell GCC this doesn't
	return, fixing some warnings.

2010-05-13  Alan McGovern  <amcgovern@novell.com>

	* src/gstring.c: Put in some null guards for the ctors

2010-05-11  Miguel de Icaza  <miguel@novell.com>

	* src/gunicode.c: Pull the Windows.h header when G_OS_WIN32 is
	defined. 

2010-05-11  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile.am : do not try to build test on windows (fails).
	* src/glib.h : fix cygwin build, do not include unistd.h.

2010-05-10  Miguel de Icaza  <miguel@novell.com>

	* gfile-win32.c: Port this to use the Win32 APIs to get this
	building with Cygwin.

2010-05-07  Andrew Jorgensen  <ajorgensen@novell.com>

	* test/test.h: Fix some compiler warning that SUSE takes seriously.

2010-05-06  Alan McGovern  <amcgovern@novell.com>

	* src/gmarkup.c: Fix a parser issue when skipping the xml declaration.

2010-05-06  Jonathan Chambers  <joncham@gmail.com>

	* gfile-win32.c: Use __stat64 instead of _stat64.

2010-05-04  Jonathan Chambers  <joncham@gmail.com>

	* gspawn.c: Remove extern define for MSVC.

2010-05-03  Zoltan Varga  <vargaz@gmail.com>

	* src/glib.h: Include unistd.h on !windows for pid_t.

	* gspawn.c: Add an extern define for environ on !apple platforms.

2010-05-02  Zoltan Varga  <vargaz@gmail.com>

	* src/glib.h: Include sys/types.h for pid_t.
